<?xml version="1.0"?>
<package format="2">
  <name>ros_turtle_cleaner</name>
  <version>1.0.0</version>
  <description>The ros_turtle_cleaner package</description>
  <maintainer email="dioghmcruz@gmail.com">BlueDi</maintainer>
  <license>MIT</license>
  <author email="dioghmcruz@gmail.com">BlueDi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
